.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Filter_Line__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Filter__c</fullName>
        <label>Filter</label>
        <referenceTo>Dataplier__Filter__c</referenceTo>
        <relationshipLabel>Filter Lines</relationshipLabel>
        <relationshipName>Filter_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dataplier__OperatorH__c</fullName>
        <formula>IF(ISPICKVAL(Dataplier__Operator__c, &apos;e&apos;), &apos;equals&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;n&apos;), &apos;not equal to&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;s&apos;), &apos;starts with&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;c&apos;), &apos;contains&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;k&apos;), &apos;does not contain&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;l&apos;), &apos;less than&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;g&apos;), &apos;greater than&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;m&apos;), &apos;less or equal&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;h&apos;), &apos;greater or equal&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;u&apos;), &apos;includes&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;x&apos;), &apos;excludes&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;w&apos;), &apos;within&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;i&apos;), &apos;in&apos;,
IF(ISPICKVAL(Dataplier__Operator__c, &apos;j&apos;), &apos;does not in&apos;,
&apos;&apos;
))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OperatorH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>e</fullName>
                </value>
                <value>
                    <fullName>n</fullName>
                </value>
                <value>
                    <fullName>s</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>k</fullName>
                </value>
                <value>
                    <fullName>l</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>h</fullName>
                </value>
                <value>
                    <fullName>u</fullName>
                </value>
                <value>
                    <fullName>x</fullName>
                </value>
                <value>
                    <fullName>w</fullName>
                </value>
                <value>
                    <fullName>i</fullName>
                </value>
                <value>
                    <fullName>j</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Query_V2__c</fullName>
        <description>Extended Query__c field</description>
        <label>Query V2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Query__c</fullName>
        <label>Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Filter Line</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Filter Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>